<resources>
    <string name="app_name">cryptocurrency</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="convert">Convert</string>
    <string name="price_usd">00.00</string>
    <string name="OneHour">1hr:</string>
    <string name="OneHourPercentage">0.00%</string>
    <string name="TwentyFourHour">24hr:</string>
    <string name="TwentyFourHourPercentage">0.00%</string>
    <string name="SevenDays">7d:</string>
    <string name="SevenDayPercentage">0.00%</string>
    <string name="from_currency">From Currency:</string>
    <string name="to_currency">To Currency:</string>
    <string name="amount">Amount:</string>
    <string name="enter_amount">Enter amount</string>
    <string name="result_text">Conversion Result:</string>
    <string name="result_icon">Result Icon</string>
    <string name="settings">Settings</string>
    <string name="currency">Currency</string>
    <string-array name="currency_options">
        <item>USD</item>
        <item>EUR</item>
        <item>RON</item>
    </string-array>
    <string-array name="crypto_limit">
        <item>10</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>
</resources>